--- a/README
+++ b/README
@@ -4,3 +4,9 @@ ansible-galaxy collection install -r requirements.yml
 ansible-galaxy install -r requirements.yml
 
 ansible-playbook -i local -v playbook-ubuntu.yml -K
+
+or
+
+ansible-playbook -i local -v playbook-kubuntu.yml -K
+
+In case, --skip-tags latex
