--- a/README
+++ b/README
@@ -1,1 +1,9 @@
 An example of Ansible Playbook for installing and configuring Ubuntu.
+
+# Molecule testing
+
+cd molecule
+
+cd default (for Ubuntu) or kubuntu (for Kubuntu)
+
+molecule lint
